@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.16 2007-10-04 00:18:59 nicm Exp $
+# $Id: Makefile,v 1.17 2007-10-04 09:30:53 nicm Exp $
 
 .SUFFIXES: .c .o .y .h
 .PHONY: clean
@@ -20,8 +20,8 @@ SRCS= tmux.c server.c server-msg.c server-fn.c buffer.c buffer-poll.c status.c \
       xmalloc.c xmalloc-debug.c input.c input-keys.c screen.c window.c \
       session.c local.c log.c client.c client-msg.c client-fn.c key-string.c \
       key-bindings.c cmd.c cmd-new-session.c cmd-detach-session.c \
-      cmd-list-sessions.c cmd-new-window.c cmd-next-window.c \
-      cmd-previous-window.c cmd-last-window.c cmd-list-keys.c
+      cmd-list-sessions.c cmd-new-window.c cmd-next-window.c cmd-bind-key.c \
+      cmd-unbind-key.c cmd-previous-window.c cmd-last-window.c cmd-list-keys.c
 
 YACC= yacc -d
 
