@@ -38,6 +38,7 @@
 - commands should have to care less about CMD_KEY
 - CLIENT_HOLD sucks
 - session with CMD_NOSESSION should be an error
+- each command should have a print op as well for list keys
 
 -- For 0.1 --------------------------------------------------------------------
 - man page
