@@ -1,9 +1,14 @@
+04 October 2007
+
+* (nicm) Key binding and unbinding is back.
+
 03 October 2007
 
+* (nicm) {new,next,last,previous}-window.
 * (nicm) Rewrite command handling so commands are much more generic and the
   same commands are used for command line and keys (although most will probably
   need to check how they are called). Currently incomplete (only new/detach/ls
-  implemented).
+  implemented). Change: -s is now passed before command again!
 * (nicm) String number arguments. So you can do: tmux bind ^Q create "blah".
 * (nicm) Key binding. tmux bind key command [argument] and tmux unbind key.
   Key names are in a table in key-string.c, plus A is A, ^A is ctrl-A.
@@ -103,5 +108,5 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.26 2007-10-03 21:31:06 nicm Exp $
+$Id: CHANGES,v 1.27 2007-10-04 09:30:53 nicm Exp $
 
